feat: organiza frontend da aplicacao

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Snake Battle Arena | Jogo de Apostas em Solana</title>
+    <meta name="description" content="Jogue Snake multiplayer e aposte em batalhas épicas. Conecte sua wallet Solana, entre na arena como jogador ou apostador e ganhe SOL!" />
+    <meta name="author" content="Snake Battle Arena" />
+    <meta name="keywords" content="snake game, solana, betting, crypto gaming, web3 games, apostas, blockchain" />
+    <link rel="canonical" href="https://snakebattle.arena" />
+
+    <meta property="og:title" content="Snake Battle Arena | Jogo de Apostas em Solana" />
+    <meta property="og:description" content="Jogue Snake multiplayer e aposte em batalhas épicas. Conecte sua wallet Solana e ganhe SOL!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Snake Battle Arena" />
+    <meta name="twitter:description" content="Jogue Snake multiplayer e aposte em Solana" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
